competition terms & conditions

--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -37,11 +37,12 @@
       <h4 class="core-title core-title--xs space--lg">Teilnahme</h4>
       <p>Teilnahmeberechtigt sind ausschließlich volljährige natürliche Personen mit Wohnsitz in Deutschland und Österreich. Pro Person ist nur eine einmalige Teilnahme am Gewinnspiel erlaubt.</p>
       <p>Die Teilnahme am Gewinnspiel ist kostenlos und unabhängig von dem Erwerb einer Ware oder Dienstleistung.</p>
-      <p>Die Teilnahme erfolgt durch das Beantworten der Gewinnspielfragen auf https://www.secretescapes.com/lexus-design-collection/de/gewinnspiel/ unter Angabe von Vor- und Zuname sowie einer gültigen E-Mail Adresse. Secret Escapes behält sich das Recht vor, bei Verstoß gegen diese Teilnahmebedingungen, Teilnehmer vom Gewinnspiel auszuschließen. Gegebenenfalls wird der Gewinn nachträglich aberkannt und zurückgefordert.</p>
+      <p>Die Teilnahme erfolgt durch das Beantworten der Gewinnspielfragen auf http://mp.secretescapes.com/lexus-design-collection/de/gewinnspiel/ unter Angabe von Vor- und Zuname sowie einer gültigen E-Mail Adresse.</p>
+      <p>Secret Escapes behält sich das Recht vor, bei Verstoß gegen diese Teilnahmebedingungen, Teilnehmer vom Gewinnspiel auszuschließen. Gegebenenfalls wird der Gewinn nachträglich aberkannt und zurückgefordert.</p>
       <p>Mitarbeiter von Secret Escapes, ihrer verbundenen Unternehmen sowie Gewinnspielpartner, einschließlich Angehörige der vorgenannten Gruppen, sind von der Teilnahme ausgeschlossen.</p>
 
       <h4 class="core-title core-title--xs space--lg">Gewinnspiel/Verlosung</h4>
-      <p>Das Gewinnspiel endet am 19.05.2019 um 23:59 Uhr</p>
+      <p>Das Gewinnspiel endet am 02.06.2019 um 23:59 Uhr</p>
       <p>Der Gewinner wird per Losverfahren ermittelt und anschließend per E-Mail informiert.</p>
       <p>Zur Verlosung stehen diverse Sach- und Wertpreise wie unten aufgeführt. Eine Angabe von Präferenzen ist ausgeschlossen.</p>
       <p>Secret Escapes behält sich das Recht vor, das Gewinnspiel zu jedem Zeitpunkt ohne Vorankündigung zu beenden, wenn aus technischen oder rechtlichen Gründen eine ordnungsgemäße Durchführung nicht gewährleistet werden kann.</p>
