--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -158,6 +158,66 @@
   link: https://www.secretescapes.de/schloss-fleesensee-gohren-lebbin-deutschland2/sale
   domestic: true
 
+- title: The Mandala Berlin
+  id: the-mandala-berlin
+  location: The Mandala Berlin, Deutschland
+  description: Exklusives Designhotel in Berliner Bestlage inkl. Frühstücksbuffet, spätem Check-out &amp; WLAN
+  price: 170
+  price-description: pro Suite pro Nacht
+  saved: 37
+  expires: 2019/04/16
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/18957/30b31771_3ba7_476e_9dbc_578dd07d4993.jpg
+  link: https://www.secretescapes.de/the-mandala-berlin-the-mandala-berlin-deutschland-potsdamer-platz/sale
+  domestic: true
+
+- title: Junges Designhotel in München
+  id: junges-designhotel-in-münchen
+  location: Ruby Lilly Hotel Munich, München, Bayern, Deutschland
+  description: Unterkunft in einem Cosy-Zimmer – inkl. Frühstücksbuffet &amp; WLAN-Nutzung
+  price: 99
+  price-description: pro Zimmer pro Nacht
+  saved: 45
+  expires: 2019/04/24
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/46766/538e3883_bb9f_4f2e_8b0c_89f14eed5db6.jpg
+  link: https://www.secretescapes.de/junges-designhotel-in-muenchen-ruby-lilly-hotel-munich-muenchen-bayern-deutschland/sale
+  domestic: true
+
+- title: Auf Usedom den Sonnenuntergang genießen
+  id: auf-usedom-den-sonnenuntergang-genießen
+  location: Nadler Hof, Ahlbeck, Usedom, Ostsee, Mecklenburg-Vorpommern, Deutschland
+  description: Strandkorb-Harmonie auf Usedom - inkl. 1 Flasche Wein &amp; Extras
+  price: 90
+  price-description: pro Apartment pro Nacht
+  saved: 32
+  expires: 2019/04/24
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92399/54959c03_e632_4d35_9fe9_ca4870dede98.jpg
+  link: https://www.secretescapes.de/auf-usedom-den-sonnenuntergang-geniessen-nadler-hof-ahlberg-usedom-ostsee-mecklenburg-vorpommern-deutschland/sale
+  domestic: true
+
+- title: Beliebtes Künstler-Domizil in Düsseldorf
+  id: beliebtes-künstler-domizil-in-düsseldorf
+  location: STAGE 47 Design-Hotel, Düsseldorf, Nordrhein-Westfalen, Deutschland
+  description: Inkl. Frühstücksbuffet, spätem Check-out, Begrüßungsgetränk &amp; Extras
+  price: 88
+  price-description: pro Zimmer pro Nacht
+  saved: 49
+  expires: 2019/04/24
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/40465/2216788b_2531_4071_8f83_bbf37a90895d.jpg
+  link: https://www.secretescapes.de/beliebtes-kuenstler-domizil-in-duesseldorf-stage-47-design-hotel-duesseldorf-nordrhein-westfalen-deutschland/sale
+  domestic: true
+
+- title: Aufwachen mit Skylineblick in Frankfurt
+  id: aufwachen-mit-skylineblick-in-frankfurt
+  location: Scandic Frankfurt Museumsufer, Frankfurt am Main, Hessen, Deutschland
+  description: Am schönsten Ufer des Mains flanieren – inkl. Frühstück &amp; spätem Check-out
+  price: 99
+  price-description: pro Zimmer pro Nacht
+  saved: 47
+  expires: 2019/04/16
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/66916/5b60ff85_9d9c_422a_88ac_b6c9ac711229.jpg
+  link: https://www.secretescapes.de/aufwachen-mit-skylineblick-in-frankfurt-scandic-frankfurt-museumsufer-frankfurt-am-main-hessen-deutschland/sale
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
@@ -643,4 +703,28 @@
   expires: 2019/04/15
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9500/43e8a2de_56ad_41ff_87b2_459f55839766.jpg
   link: https://www.secretescapes.de/rom-palazzo-rafinesse-nahe-termini-palazzo-montemartini-rom-italien/sale
+  domestic: false
+
+- title: Wohlfühl-Ambiente im österreichischen Vorarlberg
+  id: wohlfühl-ambiente-im-österreichischen-vorarlberg
+  location: Löwen Hotel Montafon, Schruns, Vorarlberg, Österreich
+  description: Inkl. 3/4-Pension, 1 Glas Prosecco zur Begrüßung, täglichem Spa-Zugang &amp; Extras
+  price: 246
+  price-description: pro Zimmer pro Nacht
+  saved: 30
+  expires: 2019/04/24
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/35490/34dec000_91ea_4c56_b44b_8231e3e4ce5e.jpg
+  link: https://www.secretescapes.de/wohlfuehl-ambiente-im-osterreichischen-vorarlberg-lowen-hotel-montafon-schruns-vorarlberg-osterreich/sale
+  domestic: false
+
+- title: Residieren in Wiens 1. Bezirk mit Rooftop-Pool
+  id: residieren-in-wiens-1.-bezirk-mit-rooftop-pool
+  location: Grand Ferdinand, Wien, Österreich
+  description: Designhotel an der Prachtstraße – inkl. Frühstücksbuffet, Rooftop-Pool &amp; spätem Check-out
+  price: 169
+  price-description: pro Zimmer pro Nacht
+  saved: 48
+  expires: 2019/04/24
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/23938/49341686_96af_4928_abeb_d449eb2becbe.jpg
+  link: https://www.secretescapes.de/residieren-in-wiens-1-bezirk-mit-rooftop-pool-grand-ferdinand-wien-osterreich/sale
   domestic: false
