competition terms and conditions

--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -33,7 +33,7 @@
       <h4 class="core-title core-title--xs">Promotor Y Participantes</h4>
       <ol class="continuing-list continuing-list--start">
         <li>El promotor es Secret Escapes Ltd, 120 Holborn, London, EC1N 2TD.</li>
-        <li>Todos los candidatos («participantes») deben ser mayores de 21 años y residentes en Suecia.</li>
+        <li>Todos los candidatos («participantes») deben ser mayores de 18 años y residentes en España.</li>
         <li>No podrán participar en este sorteo los empleados de Secret Escapes y de Lexus o sus empresas asociadas, así como sus familias, representantes o terceros involucrados directamente en esta promoción.</li>
         <li>Al participar en este sorteo, todos los participantes aceptan hallarse sujetos a estos términos y condiciones a menos que les sea notificado lo contrario por escrito.</li>
       </ol>
@@ -95,7 +95,7 @@
         <li>El participante confirma estar en posesión de un permiso de conducción español que le autorice a conducir automóviles en las carreteras españolas.</li>
         <li>Los conductores deberán tener un permiso de conducir en vigor con al menos 2 años de antigüedad. Los conductores con 9 puntos o más en su carnet, así como aquellos que hayan incurrido en infracciones graves de circulación en los últimos 2 años, no serán aptos para participar en este sorteo. El conductor acepta atenerse a la normativa de tráfico de España en todo momento.</li>
         <li>El conductor declara por la presente que se encuentra en buen estado de salud, que su vista se encuentra dentro de los niveles exigidos en los exámenes de conducción españoles y que no padece ninguna enfermedad o discapacidad que le impida conducir con seguridad.</li>
-        <li>El conductor acepta ser el/la único/a responsable de cualquier decisión acerca de su capacidad para conducir y se compromete también a que, si en algún momento no se encontrase en condiciones de conducir, dejará de hacerlo inmediatamente. El conductor confirma que en ningún momento mientras esté a cargo del automóvil prestado se encontrará bajo la influencia de alcohol o drogas que puedan afectar a su capacidad para conducir por encima de los límites legales actualmente vigentes en Suecia.</li>
+        <li>El conductor acepta ser el/la único/a responsable de cualquier decisión acerca de su capacidad para conducir y se compromete también a que, si en algún momento no se encontrase en condiciones de conducir, dejará de hacerlo inmediatamente. El conductor confirma que en ningún momento mientras esté a cargo del automóvil prestado se encontrará bajo la influencia de alcohol o drogas que puedan afectar a su capacidad para conducir por encima de los límites legales actualmente vigentes en España.</li>
         <li>El conductor confirma que en caso de tener algún motivo de sospecha acerca de la aptitud para la circulación o la seguridad de cualquier vehículo, informará de ello inmediatamente a un representante de Toyota.</li>
       </ol>
 
