competition terms and conditions

--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -91,32 +91,32 @@
 
       <h3 class="core-title core-title--sm">Lexus UX allmänna villkor</h3>
       <div class="space--xs"></div>
-      <h4 class="core-title core-title--xs">Förare</h4>
+      <h4 class="core-title core-title--xs">Föraren</h4>
       <ol>
-        <li>Deltagaren bekräftar att han eller hon är innehavare av ett giltigt brittiskt körkort som tillåter honom eller henne att köra bil på svenska vägar.</li>
-        <li>Föraren måste ha haft giltigt körkort i minst två år. Förare med nio prickar eller mer på sitt körkort eller som har gjort sig skyldig till ett grovt trafikbrott under de senaste två åren kommer inte att kunna delta i denna utlottning. Föraren förbinder sig att följa svenska vägtrafiklagar hela tiden.</li>
-        <li>Föraren förklarar härmed att han eller hon är vid god hälsa, att hans/hennes syn uppfyller kraven för det svenska förarprovet och att han/hon inte lider av någon sjukdom eller något funktionshinder som kan göra det osäkert för honom/henne att köra.</li>
-        <li>Föraren accepterar att han eller hon ska vara ensam ansvarig för eventuella beslut om hans/hennes lämplighet att köra bil och att om han/hon vid någon tidpunkt inte är lämpliga att göra det, då skall han/hon upphöra att köra direkt. Föraren bekräftar att han/hon inte vid något tillfälle när han eller hon är ansvarig för lånebilen kommer att överskrida den nuvarande svenska lagliga gränsen för att köra under påverkan av alkohol eller droger som kan påverka deras förmåga att köra bil.</li>
-        <li>Föraren bekräftar att om han eller hon har någon anledning till oro för trafiksäkerheten eller säkerheten gällande något fordon kommer han/hon att ta upp detta med en representant för Toyota omedelbart.</li>
+        <li>Tävlingsdeltagare försäkrar att han eller hon har ett giltigt svenskt körkort som tillåter personen att köra bil på svenska vägar. Dessutom måste deltagaren vara över 25 år och inte äldre än 75 år.</li>
+        <li>Föraren måste haft ett giltigt körkort i minst två år och får inte ha några trafiköverträdelser inom de senaste två åren. Föraren försäkrar även att han eller hon kommer att följa svensk lag under hela låneperioden.</li>
+        <li>Föraren godkänner att han eller hon är vid god hälsa. Synen är i linje med de standardkrav som finns vid svenska körkortstester. Föraren lider inte av några sjukdomar eller funktionshinder som innebär att de är en risk för sig själva eller medtrafikanter när de sitter bakom ratten.</li>
+        <li>Föraren accepterar att han eller hon har fullt ansvar för fordonet och om föraren känner att han eller hon inte är kapabel att köra ansvarar föraren för att omedelbart parkera och lämna fordonet. Föraren ansvarar även för han eller hon håller sig inom de svenska hastighetsbegränsningarna samt att föraren inte är påverkad av alkohol eller droger som kan påverka deras färdigheter ute i trafiken.</li>
+        <li>Föraren godkänner att han eller hon omedelbart ska meddela en representant på Lexus Sverige om några misstankar kring huruvida bilen kan framföras i trafik eller ej uppstår.</li>
       </ol>
 
-      <h4 class="core-title core-title--xs space--lg">Körkortskontroll</h4>
+      <h4 class="core-title core-title--xs space--lg">Körkortets giltighet</h4>
       <ol>
-        <li>Priset kan bara hämtas ut om föraren levererar en kopia av fram- och baksidan av sitt körkort.</li>
-        <li>Högst två förare tillåts att köra fordonet.</li>
-        <li>Alla körkort måste vara giltiga för försäkringsändamål och aktuella (dvs. rätt adress, prickar borttagna när de inte längre gäller) och måste vara kompletta, inte provisoriska.</li>
+        <li>Priset kan bara delas ut om föraren skickar in en kopia på både fram och baksida av sitt körkort.</li>
+        <li>Max två personer får registreras som förare.</li>
+        <li>Båda körkorten måste vara giltiga för att eventuella försäkringsärenden ska gälla.</li>
       </ol>
 
-      <h4 class="core-title core-title--xs space--lg">Fordon</h4>
+      <h4 class="core-title core-title--xs space--lg">Fordonet</h4>
       <ol>
-        <li>Lånet av Lexus UX är föremål för vissa lånebilsvillkor hos Toyota. Vinnaren måste godkänna dessa villkor innan han/hon tar fordonet i besittning.</li>
-        <li>Fordonet som är tillgängligt för vinnarna i denna utlottning är en Lexus UX. Toyota förbehåller sig rätten att tillhandahålla ett alternativt fordon om av någon anledning Lexus UX inte är tillgänglig och att genast avsluta en förares engagemang i Lexus billån när som helst och oavsett anledning.</li>
-        <li>Bilen får inte föras ut ur Sverige.</li>
-        <li>Fordonet får endast köras av vinnaren och en utsedd ytterligare förare, endast för privat bruk och inte för yrkesmässigt bruk eller någon form av racing.</li>
-        <li>Vid inlämning av fordonet kommer det att bli föremål för en grundlig inspektion. Vinnaren kommer att ansvara för eventuella skador som uppstår till följd av hans underlåtenhet att vidta rimliga försiktighetsåtgärder.</li>
-        <li>Vinnaren är ansvarig för eventuella böter, trängsel- eller andra avgifter till följd av användningen av bilen och för eventuella skador som uppstår av underlåtenhet att vidta rimliga försiktighetsåtgärder; bilen är försäkrad med en självrisk på 500 EUR för varje fordran under 5 000 EUR; 1 000 EUR för varje fordran över 5 000 EUR. Observera att dessa självrisker är utöver alla belopp som skall betalas till följd av fel bränsle och/eller motorskada på grund av körning genom översvämmade områden. För tydlighetens skull blir i sådana fall en ytterligare självrisk till ett värde av 10 % av reparationskostnaderna debiterad. Försäkringen täcker inte personliga tillhörigheter.</li>
-        <li>Rökning är inte tillåtet i fordonet.</li>
-        <li>Bilen kommer att förses med en full tank. Bilen behöver emellertid inte returneras med en full tank.</li>
+        <li>Vid lån av Lexus UX gäller speciella villkor som tillhandahålls av Lexus Sverige. Vinnaren måste godkänna dessa villkor innan de tar emot nycklarna till lånebilen.</li>
+        <li>Fordonet som lånas ut till vinnaren är en Lexus UX. Lexus Sverige reserverar sig för rättigheten att tillhandahålla en liknande bil om Lexus UX av någon anledning inte skulle vara tillgänglig. Lexus Sverige har även rätten att när som helst upphäva en förarens inblandning i billånet utan någon specifik orsak.</li>
+        <li>Fordonet kan max lånas ut under en weekend (onsdag – måndag) och fordonet får inte lämna svenska territorium.</li>
+        <li>Bilen får bara framföras av vinnaren och en extra registrerad förare. Fordonet får bara användas i privat syfte och inte i samband med företagsverksamhet eller racing.</li>
+        <li>När bilen hämtas ut går föraren och Lexus Sverige noggrant igenom fordonets skick tillsammans. Vinnaren är ansvarig för alla typer av skador som uppstår vid ovarsam hantering av fordonet.</li>
+        <li>Bilen är försäkrad hos Lexus Bilförsäkring (Länsförsäkringar). Vid eventuella skador betalar låntagaren självrisken. Skadeanmälan finns i bilens handskfack och skall om möjligt ifyllas på olycksplatsen. Trafikförsäkring 10% av basbeloppet Delkaskoförsäkring 20% av basbeloppet Vagnskadegaranti 6 000 kr + moms Bilen har dessutom en assistansförsäkring – Lexus Euro Assistance, vid behov av vägassistans ring 0771 – 24 80 00. Vid trafik- och parkeringsförseelser svarar låntagaren själv för eventuella böter. (Om påminnelse ankommer till Toyota Sweden AB, tillkommer en administrationsavgift på 300 kr + moms). Löpande kostnader betalas av låntagaren under låneperioden. Töm bilen själv på alla lösa föremål innan tjuven gör det. Bilen får ej maskintvättas med borstar! För allas trevnad är rökning i bilen inte tillåten. Låntagaren skall vid anmodan omgående återlämna bilen, även innan avtalad tidsperiod är slut.</li>
+        <li>Rökning är förbjuden i fordonets kupé.</li>
+        <li>Fordonet kommer att lämnas med full tank men behöver inte lämnas tillbaka med full tank.</li>
         <li>Fordonet kommer att levereras och hämtas från valfri adress.</li>
       </ol>
     </div>
